Fixing Dark mode

--- a/docs/mindsdb-docs/docs/stylesheets/extra.css
+++ b/docs/mindsdb-docs/docs/stylesheets/extra.css
@@ -1,13 +1,15 @@
-:root{
+[data-md-color-scheme="default"] {
     --md-primary-fg-color: #36333D !important;
-	--md-typeset-color: #4A515E !important;
+	--md-typeset-color: #40545e !important;
 	--md-default-fg-color--light:	#36333D !important;
-	--md-accent-fg-color:  #00A587 !important;
-}
+	--md-accent-fg-color:  #00A587 !important;  }
 
-body {
-color: #40545e !important;
-}
+[data-md-color-scheme="slate"] {
+	--md-primary-fg-color: #00A587 !important;
+	--md-hue: 255;
+	--md-accent-fg-color:  #00A587 !important; 
+	--md-default-fg-color--light:	#00A587 !important;
+  }
 
 
 .block {
@@ -111,7 +113,6 @@ color: #40545e !important;
 }
 
 h1{
-	color: #36464e !important;
 	font-weight: 700 !important;
 	font-size: 35px !important;
 	line-height: 36px !important;
@@ -119,7 +120,6 @@ h1{
 }
 
 h2{
-	color: #36464e !important;
 	font-weight: 600 !important;
 	font-size: 25px !important;
 	line-height: 32px !important;
@@ -128,7 +128,6 @@ h2{
 
 
 h3{
-	color: #36464e !important;
 	font-style: normal !important;
 	font-weight: 600 !important;
 	font-size: 20px !important;
